AC_INIT(iljit-gc-shifter, 0.0.1.4, simo.xan@gmail.com)

AM_INIT_AUTOMAKE(iljit-gc-shifter, 0.0.1.4)

AM_CONFIG_HEADER(src/config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_PREFIX_DEFAULT(/usr/local)
if test "${prefix}" == "NONE" ; then
	prefix=/usr/local
fi
AC_ARG_ENABLE(debug, [  --enable-debug    Enable debug compilation])
AC_ARG_ENABLE(printdebug, [  --enable-printdebug    Enable the print debug and the debug compilation])
AC_ARG_ENABLE(profile, [  --enable-profile    Enable the compilation for the automatically profiler tools])
AM_CONDITIONAL(DEBUG, test "$enable_debug" = "yes")
AM_CONDITIONAL(PRINTDEBUG, test "$enable_printdebug" = "yes")
AM_CONDITIONAL(PROFILE, test "$enable_profile" = "yes")
AC_DEFINE_UNQUOTED(PREFIX,		"${prefix}",				[Prefix directory])
AC_DEFINE_UNQUOTED(DATADIR,		"${prefix}/share",			[Data directory])

AC_CANONICAL_HOST

##############################################################################################################################
#						Checks for programs.
##############################################################################################################################
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_LIBTOOL
AC_CHECK_TOOL(PKGVAR, pkg-config)
if test -z "$PKGVAR" ; then
	echo "ERROR: I can't find the pkg-config program, then you have to install it" ;
	exit 1 ;
fi

##############################################################################################################################
##						Checks for libraries.
##############################################################################################################################
iljit_iljitu_modules="libiljitu"
PKG_CHECK_MODULES(ILJITES_ILJITU, [$iljit_iljitu_modules])
AC_SUBST(ILJITES_ILJITU_CFLAGS)
AC_SUBST(ILJITES_ILJITU_LIBS)

xan_module="libxan >= 0.0.1.9"
PKG_CHECK_MODULES(XAN, [$xan_module])
AC_SUBST(XAN_CFLAGS)
AC_SUBST(XAN_LIBS)

iljit_module="iljit >= 0.0.1.7"
PKG_CHECK_MODULES(ILJIT, [$iljit_module])
AC_SUBST(ILJIT_CFLAGS)
AC_SUBST(ILJIT_LIBS)

##############################################################################################################################
#						Checks for header files.
##############################################################################################################################
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

AC_FUNC_ALLOCA

AC_OUTPUT(
	Makefile 
	src/Makefile
)
